# options-trader-sim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/: .gitignore  CMakeLists.txt  README.md  StaticMain.cpp  main.cpp
backend/benchmarks/: BENCHMARKS.md  legacy_benchmark.txt
backend/include/: BAW.h  BinomialTree.h  BlackScholes.h  JuZhong.h  PricingDispatcher.h
backend/include/api/: ApiKeyLoader.h  Client.h  DataManager.h
backend/include/legacy/: AmericanOption.h  EuropeanOption.h  MarketDataFeed.h  OptionClass.h  TemplatePricing.h
backend/include/pricing/: BAW.h  BinomialTree.h  BlackScholes.h  JuZhong.h  PricingDispatcher.h
backend/include/shared/: BenchmarkUtils.h  BinomialWorkspace.h  Greeks.h  MathUtils.h  Option.h  OptionBatch.h  OptionEnums.h
backend/include/simulation/: MarketDataFeed.cpp  MarketDataFeed.h
backend/src/: BAW.cpp  BinomialTree.cpp  BlackScholes.cpp  MarketDataFeed.cpp  PricingDispatcher.cpp  StaticMain.cpp  main.cpp
backend/src/american/: AmericanOption.h
backend/src/api/: ApiKeyLoader.cpp  Client.cpp  DataManager.cpp  parserutils.cpp
backend/src/european/: EuropeanOption.cpp  EuropeanOption.h
backend/src/greeks/: Greeks.cpp  Greeks.h
backend/src/legacy/: EuropeanOption.cpp  MarketDataFeed.cpp
backend/src/option/: Option.h
backend/src/pricing/: BAW.cpp  BatchPricing.h  BinomialTree.cpp  BinomialTree.h  BinomialWorkspace.h  BlackScholes.cpp  BlackScholes.h  OptionBatch.h  PricingDispatcher.cpp  PricingDispatcher.h  TemplatePricing.h
backend/src/shared/: BinomialWorkspace.h  Option.h  OptionType.h
backend/src/templateAndInheritance/: AmericanOption.h  EuropeanOption.cpp
backend/tests/: BenchmarkUtils.h  CMakeLists.txt  DispatcherBenchmarks.cpp  DispatcherBenchmarks.h  TemplateBenchmarks.txt  performance_test.cpp
backend/tests/include/: DispatcherBenchmarks.h  TestUtils.h
backend/tests/include/legacy/: TemplateBenchmarks.h
backend/tests/legacy/: TemplateBenchmarks.cpp  TemplateBenchmarks.h
backend/tests/src/: DispatcherBenchmarks.cpp  TestUtils.cpp  performance_test.cpp
backend/tests/src/legacy/: TemplateBenchmarks.cpp
src/: EuropeanOption.cpp  EuropeanOption.h
